--- a/testArea/app/Components/Home.css
+++ b/testArea/app/Components/Home.css
@@ -17,6 +17,10 @@
   line-height: 28px;
   font-family: Lato, sans-serif;
   cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .sendButton:active {
